@@ -1,14 +1,0 @@
-% Toplevel initialisation file. 
-	
-\version "2.3.16"
-
-
-\include "declarations-init.ly"
-#(set-global-staff-size 16)
-
- \paper{
-	\paperSixteen
-}
-
-
-\maininput
